Fix (Component): Fix dark mode
nanotrejoweb > NW-005

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -15,8 +15,7 @@
     
     .home-text-description {
         font-size: large;
-        color: rgba(177, 174, 174, 0.705);
-        height: 50%;
+        color: var(--text-description);
         width: 70%;
         margin: 0 auto;
     }
